<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YOLO</string>
    <string name="categories">Categories*</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="subcategories">Subcategories*</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_location_picker">LocationPicker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email">Email ID</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="aboutus">About Us</string>
    <string name="title_activity_help">Help</string>
    <string name="help">Help</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_activity_know_product">KnowProduct</string>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="title_activity_past_search">PastSearch</string>
    <string name="product_desc">Product Description</string>
    <string name="clear">Clear</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="selling_store">Selling store</string>
    <string name="prod_from">Produced from</string>
    <string name="pull_to_refresh">Pull To Refresh</string>
    <string name="remember">Remember Me</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_filters">Filters</string>
    <string name="filters">Filters</string>

</resources>