<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchScreen" >

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/categories"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/subcategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/categories"
        android:layout_alignBottom="@+id/categories"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:text="@string/subcategories"
        android:textAppearance="?android:attr/textAppearanceMedium" />

<!--     <EditText
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:maxLength="20"
        android:hint="Company Name"
        android:singleLine="true" >

        <requestFocus />
    </EditText>
 -->

   <AutoCompleteTextView
        android:id="@+id/company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:maxLength="20"
        android:hint="Company Name"
        android:singleLine="true"
        android:imeOptions="actionNext" >

        <requestFocus />
    </AutoCompleteTextView>



    <TextView
        android:id="@+id/tO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/FROM"
        android:layout_alignBottom="@+id/FROM"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/search_button"
        android:text="To*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FROM"
        android:layout_marginTop="32dp"
        android:layout_toRightOf="@+id/FROM"
        android:text="Location*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/FROM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categories"
        android:layout_below="@+id/categories"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="38dp"
        android:text="From*"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/search" />
<!-- 
    <EditText
        android:id="@+id/vendor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/selling_store"
        android:maxLength="20"
        android:singleLine="true" />
 -->
 
 
    <AutoCompleteTextView
        android:id="@+id/vendor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/selling_store"
        android:maxLength="20"
        android:singleLine="true"
        android:imeOptions="actionDone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Read Downloaded file" />
    
</RelativeLayout>